--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+__   _____ _ __ ___(_) ___  _ __   |___ /| || |  
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \| || |_ 
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) |__   _|
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_) |_|  
+
+The "Winter in Frejus" release. Also known as "ANR/ADT funding helps"
+(major changes):
+
+ * New feature: Model check any simgrid simulation
+ * SMPI: now considered stable
+ * Visualization:
+    - now covers the whole framework
+    - major usability improvements
+ * SURF:
+    - scalable platform management through hiearchical description
+    - new efficient way to bypass the XML parser
+ * MSG: at last asynchronous functions are available
+ * SIMDAG: many usability improvements (dotloader, ...)
+ * GRAS: finally catch up with latest internal evolutions
+ * Build chain:
+    - Windows port: should be usable now but still considered experimental
+    - Autotools have now been completely removed
+
+
                     _               _____ _  _    _ 
 __   _____ _ __ ___(_) ___  _ __   |___ /| || |  / |
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \| || |_ | |
