get the good parts of the replay without stack into the regular replay
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9233 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 SimGrid (3.6) unstable; urgency=low
 
+ MSG
+ * Change the prototypes of action replay. Sorry for inconvenience,
+   but this is really more efficient this way.
+
  SURF
  * New model for multi-core CPUs. You can now use the core attribute to
    precise the number of cores of a host. This is a basic model. Every
