Define variadic logging macros.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9652 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ SimGrid (3.6) unstable; urgency=low
    NULL-terminated array. This may solve backward compatibility issues
    due to the change to return type of SD_Simulate. See also:
    http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
+ * Add new logging macros, with variable number of arguments.
 
  INSTR
  * New configuration options
