Remove old style logging macros.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9654 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@ SimGrid (3.6) unstable; urgency=low
    due to the change to return type of SD_Simulate. See also:
    http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
  * Add new logging macros, with variable number of arguments.
+ * Kill old style logging macros.
 
  INSTR
  * New configuration options
