Revert "Remove old style logging macros."
Do not break backward compatibility.  Define XBT_USE_DEPRECATED to use
the old macros INOF1, INFO2, etc.

This reverts commit 8f12c0e9161fabfd7e0ab3f3688546ec7e237e51.

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9661 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,8 +35,8 @@ SimGrid (3.6) unstable; urgency=low
    NULL-terminated array. This may solve backward compatibility issues
    due to the change to return type of SD_Simulate. See also:
    http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
- * Add new logging macros, with variable number of arguments.
- * Kill old style logging macros.
+ * Add new logging macros, with variable number of arguments. Define
+   XBT_USE_DEPRECATED if you want to use the old macros INFO1, INFO2, etc.
 
  INSTR
  * New configuration options
