useless commit to test CIA on IRC
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9865 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 This is the SimGrid project.
 
+This file is a bit outdated, sorry.
+
 There is at least 5 sub-projects in the tree:
 
  - XBT: eXtended Bundle of Tools (low-level toolbox: logging, datatypes).
