--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ SimGrid (3.6) unstable; urgency=low
    and the memory is released automatically once it is finished. This function
    is useful when you don't care about the end nor the success of a
    communication you send.
+ * New example: a basic implementation of the Chord P2P algorithm.
 
  SURF
  * New model for multi-core CPUs. You can now use the core attribute to
